--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "fractions",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://awr-fractions.herokuapp.com/",
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-oauth-flow": "^1.2.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
